drawable에 xml로 작성하여 listview 한칸의 background 커스텀 해주었다.

--- a/app/src/main/res/layout/todo_list_item.xml
+++ b/app/src/main/res/layout/todo_list_item.xml
@@ -4,6 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/list_item_shape_r6"
     android:gravity="center_vertical"
     android:padding="20dp">
 
