--- a/app/src/main/res/layout/fragment_todo.xml
+++ b/app/src/main/res/layout/fragment_todo.xml
@@ -2,11 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/warmGray_300"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp">
 
     <ListView
         android:id="@+id/todoListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:scrollbars="none"
+        android:scrollbarSize="0dp"
+        android:dividerHeight="10dp"
+        android:divider="@color/warmGray_300"/>
 
 </LinearLayout>
